--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,11 @@
     "mongoose": "^7.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
+    "prettier": "3.0.0"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
