--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0"
   },
   "devDependencies": {
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "nodemon": "^3.0.1",
     "prettier": "3.0.0"
   },
   "lint-staged": {
