--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mongodb": "^5.6.0",
-    "mongoose": "^7.3.0"
+    "mongoose": "^7.3.0",
+    "mongoose-unique-validator": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "husky": "^8.0.3",
