--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon server.js",
     "prepare": "husky install"
   },
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "husky": "^8.0.3",
+    "jest": "^29.6.1",
     "lint-staged": "^13.2.3",
     "nodemon": "^3.0.1",
     "prettier": "3.0.0"
